# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.29.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix regression of eix-0.29.5: Do not cut after ${DEPEND}/${RDEPEND}

*eix-0.29.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Shorten database size dramatically (sort StringHashs by frequency)
	- versionsort: Fix versionsort -[pn], introduce -[fV], let -? support
	  more than one argument, ignore some non-alphanumeric rubbish
	- fix calculation of output of revision text
	- eix -R/-Z: Print clearer error message,
	  see http://bugs.gentoo.org/show_bug.cgi?id=485488
	- eix-sync: Fix checking EIX_CACHEFILE when path changed,
	  see http://bugs.gentoo.org/show_bug.cgi?id=485152
	- Improve storage of depends (simpler and better compression)
	- --print-all-depends works now as documented (no doublequote symbols)

*eix-0.29.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix wrong usage of ATTRIBUTE_NONNULL for Node *root (caused even
	  segfaults), see http://bugs.gentoo.org/show_bug.cgi?id=483392
	- Fix cache-method sqlite: Set overlay_key in read versions, see
	  http://bugs.gentoo.org/show_bug.cgi?id=480604
	- Fix: deep StringList comparison; fixes duplicate occurence of
	  mask reasons in certain cases

*eix-0.29.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add EIX_LIMIT{,_COMPACT} as a safety measurement for typos.
	  This solves somewhat http://bugs.gentoo.org/show_bug.cgi?id=346665

*eix-0.29.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix random bugs for masks with slot and no subslot
	- Fix eix-update: Make long option --override-method work
	- Fix eix-update: ebuild*: export PORTAGE_REPO_NAME and a rudimentary
	  PORTAGE_ECLASS_LOCATIONS (>=portage-2.2.0_alpha89 needs it),
	  see http://bugs.gentoo.org/show_bug.cgi?id=478320
	- Fix colorless output: http://bugs.gentoo.org/show_bug.cgi?id=478818
	- Read also PORTAGE_REPOS_CONF /usr/share/portage/config/repos.conf